fix: find a workaround for the gap between sidebar and nav on scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,7 @@ body {
 ============================ */
 .navbar {
   background-color: var(--chrome);
+  z-index: 99;
 }
 .navbar-brand {
   text-decoration: none;
